# DocTech

./: README.md
.vim/: coc-settings.json
DocTech/: pom.xml
DocTech/src/main/java/com/example/DocTech/: note.md  (+1 more)
DocTech/src/main/resources/: application.properties
DocTech/src/main/resources/csv/: data.csv
DocTech/src/main/resources/static/: ideal folder structure.txt
Frontend/: NOTES.md  README.md  package-lock.json  package.json  tailwind.config.js
Frontend/src/: index.html  styles.css
Frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
Frontend/src/app/auth/: auth.service.ts
Frontend/src/app/auth/login-doc/: login-doc.component.html  login-doc.component.spec.ts  login-doc.component.ts
Frontend/src/app/auth/login-pat/: login-pat.component.html  login-pat.component.spec.ts  login-pat.component.ts
Frontend/src/app/auth/register-doc/: register-doc.component.html  register-doc.component.spec.ts  register-doc.component.ts
Frontend/src/app/home/: home.component.html  home.component.ts
Frontend/src/app/interceptors/: token.interceptor.ts
Frontend/src/app/navbar/: navbar.component.html  navbar.component.ts
Frontend/src/app/store/: DoctorStore.ts  PatientStore.ts
Frontend/src/app/utils/: authTypes.ts  bp.ts  ecg.ts  enums.ts  helper.ts  jwt.ts  models.ts  util.ts
Frontend/src/environments/: environment.development.ts
sensor_system/: CMakeLists.txt
sensor_system/data/: data.csv  ecg_data.csv
sensor_system/src/: CSVReader.cpp  CSVReader.h  ECGSensor.cpp  ECGSensor.h  MQTTStreamer.cpp  MQTTStreamer.h  main.cpp
(+82 files in other folders)
